# google-analytics-agent-holonai-hackathon

./: .gitignore  LICENSE  PROBLEM-STATEMENT.md  README.md  main.py  pyproject.toml
src/: __init__.py  config.py
src/cli/: app.py
src/core/: agents.py  graph.py
src/models/: gemini.py
src/prompts/: __init__.py
src/tools/: bigquery.py
src/utils/: logging.py
src/web/: app.py  handlers.py  run.py  state.py
src/web/components/: __init__.py  chat.py  sidebar.py  visualization.py
